[tool.poetry]
name = "test-task-dstack"
version = "0.1.0"
description = ""
authors = ["Sergei S. <s.stukun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
cloudwatch = "^1.2.1"
docker = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
